; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_dev.c_btm_find_or_alloc_dev.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_dev.c_btm_find_or_alloc_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"btm_find_or_alloc_dev\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @btm_find_or_alloc_dev(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* %2, align 4
  %6 = call i32* @btm_find_dev(i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32* @btm_sec_alloc_dev(i32 %9)
  store i32* %10, i32** %3, align 8
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32*, i32** %3, align 8
  ret i32* %12
}

declare dso_local i32 @BTM_TRACE_EVENT(i8*) #1

declare dso_local i32* @btm_find_dev(i32) #1

declare dso_local i32* @btm_sec_alloc_dev(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
